syntax = "proto3";

option go_package = "github.com/janmbaco/CotizacionEspirituosa/grpc_api/domain/models";

package domain.models;

message NullRequest{
}

message PinUpRequest{
    uint32 delivery = 1;
    float price = 2;
}

message UnPinUpRequest{
    uint32 delivery = 1;
}

